fbconvenience: use smart pointer for QFbCursor

Fixes: QTBUG-110785
Change-Id: Id82fc300c5716ce68a2609b7fb36195f2d37e322
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit bb84232b0540ba834747459b68458054b7107541)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>